# dealership-api

./: .gitignore  README.md  main.py  package.json
backend/: main.py  pyproject.toml
backend/data/: aws.py  base.py  config.py  local.py
backend/data_access/: local_store.py
backend/local_store/: automobile_brands.json  index.json  service_calendar.json
backend/models/: automobile_brand.py  service_calendar.py
data/: service_bays.json
data_access/: aws_store.py  data_access_base.py  local_store.py
frontend/: package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: ConfigEdit.tsx  ConfigEditJson.tsx0  ConfigList.tsx  Settings.tsx  index.tsx
frontend/src/layout/: MainAppBar.tsx  MainLayout.tsx  index.ts
frontend/src/providers/: ConfigDataProvider.ts
shared/: pyproject.toml  service_bays.py
shared/backend/models/: automobile_brand.py  service_bays.py  working_hours.py
shared/frontend/: index.ts
shared/scripts/: generate_ts.py
