[tool.poetry]
name = "dealership-config-backend"
version = "0.1.0"
description = "Backend for dealership config app"
authors = ["gpeddle <gpeddle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
pydantic-to-typescript = "^1.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
